# platform-abm

./: .gitignore  LICENSE  Makefile  NARRATIVE.md  README.md  ROADMAP.md  abm-explore.py  abm-genetic.py  dashboard.py  experiment1.py  experiment2.py  experiment3.py  experiments.py  minitiebout.py  pyproject.toml  test.py
experiments/: __init__.py  reporting.py  run_exp1.py  run_exp2.py  run_sensitivity.py  run_smoke.py  runner.py  smoke_test.py  tables.py
experiments/configs/: __init__.py  builders.py  experiment_config.py
experiments/runners/: experiment1.py  experiment2.py  experiment3.py
notes/: abm-explore.ipynb  flemming-mesa-tiebout.py
platform_abm/: __init__.py  analyzer.py  burst_analysis.py  config.py  metrics.py  model.py  neighbors.py  reporter.py  search.py  tracker.py  utility.py  utils.py
platform_abm/agents/: __init__.py  base.py  community.py  platform.py
platform_abm/institutions/: __init__.py  algorithmic.py  base.py  coalition.py  direct.py
tests/: conftest.py  test_analyzer.py  test_community.py  test_config.py  test_experiment_config.py  test_initial_distribution.py  test_institutions.py  test_integration.py  test_integration_task4.py  test_last_move_step.py  test_neighbors.py  test_platform.py  test_regression.py  test_reporter.py  test_reporting.py  test_runner.py  test_search.py  test_tracker.py  test_utility.py
